# LegoBack

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING-MODULES.md
modules/ci/: manifest.yaml
modules/ci/files/: ci.yml
modules/cors/: manifest.yaml
modules/cors/files/src/core/: cors.py
modules/database/: manifest.yaml
modules/database/files/src/core/: db.py
modules/docker/: manifest.yaml
modules/docker/files/: dockerignore
modules/exception-handler/: manifest.yaml
modules/exception-handler/files/src/core/: exceptions.py
modules/jwt-auth/: manifest.yaml
modules/jwt-auth/files/src/models/: user.py
modules/jwt-auth/files/src/routers/: auth.py
modules/jwt-auth/files/tests/: test_auth.py
modules/logging/: manifest.yaml
modules/logging/files/src/core/: logging_mw.py
modules/rbac/: manifest.yaml
modules/rbac/files/src/core/: rbac.py
modules/redis-cache/: manifest.yaml
modules/redis-cache/files/src/core/: cache.py
modules/settings/: manifest.yaml
modules/settings/files/src/core/: config.py
modules/settings/files/tests/: test_settings.py
src/scaffold/: __init__.py  cli.py  ui.py
src/scaffold/ai/: recommender.py  schema.py
src/scaffold/engine/: conflicts.py  errors.py  generator.py  loader.py  manifest.py  resolver.py
templates/: Dockerfile.j2  README.md.j2  docker-compose.yml.j2  main.py.j2  pyproject.toml.j2  test_health.py
tests/: test_conflicts.py  test_generator.py  test_manifest.py  test_resolver.py
